Fix visible text during webfont load.

--- a/public/global.css
+++ b/public/global.css
@@ -8,6 +8,7 @@ html, body {
 @font-face {
     font-family: 'Poppins-Regular';
     src: url('./fonts/Poppins-Regular.ttf');
+    font-display: swap;
 }
 
 body {
